# libcpu

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
include/cpu/: cpu.h  cpu_api.h  cpu_types.h
src/: assembler.h  cpu.c  cpu_arm.c  cpu_riscv.c  cpu_x86.c  cpu_x86.h  memory.h  utils.h
test/: test_cpu.c  test_cpu.cpp
